[metadata]
name = my-package
description = My package description
long_description = file: README.rst
author = Your Name
author_email = your@email.com
url = https://link-to-your-project
license = BSD 3-Clause License

[options]
zip_safe = False
packages = find:
install_requires =
    numpy
    astropy>=3.2
